--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,16 +1,84 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+# TODO 'snapcraft register <name>'
+name: proton-pass
+icon: snap/gui/proton-pass.svg
+summary: Proton Pass desktop application.
+adopt-info: proton-pass
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  Open-source and secure identity manager.
 
-base: core22
-confinement: devmode # use 'strict' once you have the right plugs and slots
+website: https://proton.me/pass
+contact: https://github.com/pedro-avalos/proton-pass-snap/issues
+issues: https://github.com/pedro-avalos/proton-pass-snap/issues
+source-code: https://github.com/ProtonMail/WebClients
+
+base: core24
+grade: stable
+confinement: strict
+compression: lzo
+
+platforms:
+  amd64:
+
+apps:
+  proton-pass:
+    command: usr/bin/proton-pass --no-sandbox
+    desktop: meta/gui/proton-pass.desktop
+    environment:
+      LD_LIBRARY_PATH: $LD_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu/libproxy
+    extensions:
+      - gnome
+    plugs:
+      - desktop
+      - desktop-legacy
+      - wayland
+      - unity7
+      - browser-support
+      - password-manager-service
+      - gsettings
+      - home
+      - network
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  proton-pass:
+    plugin: npm
+    source-type: git
+    source: https://github.com/ProtonMail/WebClients
+    build-snaps:
+      - node/20/stable
+    build-packages:
+      - jq
+    stage-packages:
+      - libx11-6
+      - libxext6
+      - libxcb1
+      - libxcomposite1
+      - libxdamage1
+      - libxfixes3
+      - libxrandr2
+      - libasound2t64
+      - libatk1.0-0t64
+      - libatk-bridge2.0-0t64
+      - libatspi2.0-0t64
+      - libcairo2
+      - libcups2t64
+      - libgbm1
+      - libgtk-3-0t64
+      - libnspr4
+      - libnss3
+      - libpango-1.0-0
+      - libproxy1v5
+    override-pull: |
+      craftctl default
+      craftctl set version=$(jq -r .version < applications/pass-desktop/package.json)
+    override-build: |
+      yarn install
+      yarn build:desktop
+
+      mkdir -p $CRAFT_PART_INSTALL/usr/lib/proton-pass \
+        $CRAFT_PART_INSTALL/usr/bin
+
+      cp -r applications/pass-desktop/out/Proton\ Pass-linux-x64/* \
+        $CRAFT_PART_INSTALL/usr/lib/proton-pass/
+
+      ln -s ../lib/proton-pass/Proton\ Pass \
+        $CRAFT_PART_INSTALL/usr/bin/proton-pass
