Update proton-pass icon

--- a/snap/gui/proton-pass.desktop
+++ b/snap/gui/proton-pass.desktop
@@ -4,7 +4,7 @@ Name=Proton Pass
 Comment=Open-source and secure identity manager.
 GenericName=Password Manager
 Exec=proton-pass %U
-Icon=${SNAP}/meta/gui/proton-pass-snap.svg
+Icon=${SNAP}/meta/gui/proton-pass.svg
 Terminal=false
 StartupNotify=true
 Categories=Utility;
