Clean up dependencies and add plugs.
- Clean up stage-packages.
- Add plugs that are necessary for the application.

NOTE: Once the snap is listed on the snap store, I will need to request approval to auto-connect some of these plugs

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,8 +23,6 @@ apps:
   proton-pass:
     command: usr/bin/proton-pass --no-sandbox
     desktop: meta/gui/proton-pass.desktop
-    environment:
-      LD_LIBRARY_PATH: $LD_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu/libproxy
     extensions:
       - gnome
     plugs:
@@ -32,10 +30,14 @@ apps:
       - desktop-legacy
       - wayland
       - unity7
+      - x11
       - browser-support
-      - password-manager-service
+      - password-manager-service  # TODO: This should probably auto-connect
       - gsettings
       - home
+      - removable-media
+      - hardware-observe  # NOTE: This seems to allow access to detect security keys...
+      - u2f-devices  # TODO: This should probably auto-connect
       - network
 
 parts:
@@ -47,26 +49,6 @@ parts:
       - node/20/stable
     build-packages:
       - jq
-    stage-packages:
-      - libx11-6
-      - libxext6
-      - libxcb1
-      - libxcomposite1
-      - libxdamage1
-      - libxfixes3
-      - libxrandr2
-      - libasound2t64
-      - libatk1.0-0t64
-      - libatk-bridge2.0-0t64
-      - libatspi2.0-0t64
-      - libcairo2
-      - libcups2t64
-      - libgbm1
-      - libgtk-3-0t64
-      - libnspr4
-      - libnss3
-      - libpango-1.0-0
-      - libproxy1v5
     override-pull: |
       craftctl default
       craftctl set version=$(jq -r .version < applications/pass-desktop/package.json)
