--- a/.github/workflows/sync-version-with-upstream.yml
+++ b/.github/workflows/sync-version-with-upstream.yml
@@ -22,8 +22,11 @@ jobs:
         with:
           token: ${{ secrets.SNAPCRAFTERS_BOT_COMMIT }}
           update-script: |
-            echo "Change me!"
-            # This should be a script that looks for a new upstream version, and modifies the
-            # snapcraft.yaml accordingly. For examples, take a look at:
-            # - https://github.com/snapcrafters/mattermost-desktop/blob/candidate/.github/workflows/sync-version-with-upstream.yml
-            # - https://github.com/snapcrafters/discord/blob/candidate/.github/workflows/sync-version-with-upstream.yml
+            VERSION=$(curl -sL https://proton.me/download/PassDesktop/linux/x64/version.json |
+              jq . | grep Version | head -n 1 | cut -d'"' -f4
+            )
+            CHECKSUM=$(curl -sL https://proton.me/download/PassDesktop/linux/x64/version.json |
+              jq . | grep Sha512CheckSum | head -n 1 | cut -d'"' -f4
+            )
+            sed -i 's/^\(version: \).*$/\1'"$VERSION"'/' snap/snapcraft.yaml
+            sed -i 's/\(source-checksum: \).*$/\1'"sha512\/$CHECKSUM"'/' snap/snapcraft.yaml
