Use version variable for source url.
USE `$SNAPCRAFT_PROJECT_VERSION` for source url, this simplifies sync-version script

--- a/.github/workflows/sync-version-with-upstream.yml
+++ b/.github/workflows/sync-version-with-upstream.yml
@@ -25,12 +25,8 @@ jobs:
             VERSION=$(curl -sL https://proton.me/download/PassDesktop/linux/x64/version.json |
               jq -r .Releases[0].Version
             )
-            SOURCE_URL=$(curl -sL https://proton.me/download/PassDesktop/linux/x64/version.json |
-              jq -r .Releases[0].File[0].Url
-            )
             CHECKSUM=$(curl -sL https://proton.me/download/PassDesktop/linux/x64/version.json |
               jq -r .Releases[0].File[0].Sha512CheckSum
             )
             sed -i 's/^\(version: \).*$/\1'"$VERSION"'/' snap/snapcraft.yaml
-            sed -i 's,\(source: \).*$,\1'"$SOURCE_URL"',' snap/snapcraft.yaml
-            sed -i 's/\(source-checksum: \).*$/\1'"sha512\/$CHECKSUM"'/' snap/snapcraft.yaml
+            sed -i 's,\(source-checksum: sha512/\).*$,\1'"$CHECKSUM"',' snap/snapcraft.yaml
