2FA plugs now autoconnect
See https://forum.snapcraft.io/t/auto-connecting-hardware-observe-and-u2f-devices-for-proton-pass/41355/4?u=pedro-avalos.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -35,8 +35,8 @@ apps:
       - gsettings
       - home
       - removable-media
-      - hardware-observe  # NOTE: This seems to allow access to detect security keys...
-      - u2f-devices  # TODO: This should probably auto-connect
+      - hardware-observe
+      - u2f-devices
       - network
 
 parts:
