--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,7 +3,81 @@ icon: snap/gui/proton-pass.svg
 summary: Proton Pass desktop application.
 version: 1.22.1
 description: |
-  Open-source and secure identity manager.
+  NOTE: This a wrapper of the official packages, but it is not verified,
+  affiliated with, or supported by Proton AG.
+
+  Free and fully encrypted password manager to keep your logins and passwords
+  safe.
+
+  Free and unlimited password manager to keep your login credentials safe and
+  manage them directly in your browser.
+
+  Get the password manager created by the former scientists who met at CERN
+  behind Proton Mail, the world's largest encrypted email provider. Proton Pass
+  is open-source, end-to-end encrypted, and protected by Swiss privacy laws.
+
+  Pass offers more than other free password managers and has no ads or data
+  collection. You can use it for free forever on all your devices to create and
+  store unlimited passwords, autofill logins, generate 2FA codes, create email
+  aliases, secure your notes, and more. 
+
+  **Protect your logins and their metadata with battle-tested end-to-end encryption**
+
+  While many other password managers only encrypt your password, Proton Pass
+  uses end-to-end encryption on all your stored login details (including your
+  username, the website address, and more). 
+
+  **Audit Pass's open-source code**
+
+  Like all other Proton services, Pass is open source and built on the principle
+  of trust through transparency. As scientists, we know that transparency and
+  peer review lead to better security. All Proton Pass apps are open source,
+  meaning anyone can verify our security claims for themselves. 
+
+  **How can Proton Pass be free forever?**
+
+  We offer Pass for free because everyone deserves online privacy and security.
+  This is possible thanks to our supportive community on paid plans. If you
+  would like to support our work and get access to premium features, consider
+  upgrading your plan.
+
+  **Protect more than just your passwords.**
+
+  Join over 100 million people who have signed up for Proton's privacy
+  ecosystem, which includes Proton Mail, Proton Drive, Proton Calendar, Proton
+  VPN, and more. Take back control of your privacy online with our encrypted
+  email, calendar, file storage, and VPN. 
+
+  With Proton Pass, you can:
+
+  * Store and auto-sync unlimited logins on unlimited devices: You can create,
+    store, and manage your credentials from anywhere with our browser extension
+    and apps for Android and iPhone. 
+  * Sign in faster with Proton Pass autofill: You no longer need to copy and
+    paste your username and password. Easily and securely log in with Proton
+    Pass autofill technology.
+  * Avoid weak passwords: With our built-in secure password generator, you can
+    easily generate strong, unique, and random passwords based on the security
+    requirements for every website you sign up to. 
+  * Safely store encrypted notes: You can save private notes in Pass and access
+    them on all your devices.
+  * Create unique email addresses with hide-my-email aliases: Proton Pass helps
+    you hide your personal email address with email aliases. Keep spam out of
+    your inbox, avoid being tracked everywhere, and protect yourself from data
+    breaches.
+  * Make 2FA easy with our built-in authenticator: With Pass's integrated 2FA
+    authenticator, using 2FA is finally fast and convenient. Easily add a 2FA
+    code for any website and use it when you log in.
+  * Easily organize and share your sensitive data with vaults (paid feature):
+    Manage your logins, secure notes, and email aliases with vaults. In the next
+    version of Pass, you'll be able to share vaults with your family, friends,
+    or colleagues.
+  * Quick offline access to your login data: Access your stored passwords and
+    notes in Pass from wherever you are, even when you don't have internet
+    connection. 
+  * Secure your Pass account with additional security measures: Protect all your
+    data with another layer of protection, either with TOTP or U2F/FIDO2
+    security keys.
 
 website: https://proton.me/pass
 contact: https://github.com/pedro-avalos/proton-pass-snap/issues
