--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,6 +2,7 @@ name: proton-pass
 icon: snap/gui/proton-pass.svg
 summary: Proton Pass desktop application.
 version: 1.23.1
+license: GPL-3.0
 description: |
   NOTE: This is a wrapper of the official package, but it is not verified,
   affiliated with, or supported by Proton AG.
